<resources>
    <string name="app_name" translatable="false">Traveler</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="calendar_icon" translatable="false">Calendar</string>
    <string name="location_icon" translatable="false">Location</string>
    <string name="settings_icon" translatable="false">Settings</string>
    <string name="category_icon" translatable="false">Category</string>
    <string name="btn_show_filters" translatable="false">Filters</string>
    <string name="star_icon" translatable="false">Star</string>
    <string name="btn_add" translatable="false">Add</string>
    <string name="btn_center_on_location" translatable="false">CenterOnLocation</string>
    <string name="btn_back" translatable="false">Back</string>
    <string name="btn_save" translatable="false">Save</string>
    <string name="qr" translatable="false">Qr</string>
    <string name="phone_icon" translatable="false">phone</string>
    <string name="link_icon" translatable="false">link</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="back_action" translatable="false">Back</string>
    <string name="emoji_selector_desc" translatable="false">Emoji selector</string>
    <string name="emoji_selector_bt_desc" translatable="false">Show Emoji selector</string>
    <string name="dm_desc" translatable="false">Direct Message</string>
    <string name="attach_photo_desc" translatable="false">Attach Photo</string>
    <string name="map_selector_desc" translatable="false">Location selector</string>
    <string name="videochat_desc" translatable="false">Start videochat</string>
    <string name="textfield_desc" translatable="false">Text input</string>
    <string name="not_available">Functionality currently not available</string>
    <string name="not_available_subtitle" translatable="false">Grab a beverage and check back later!</string>
    <string name="attached_image">Attached image</string>
    <string name="search">Search</string>
    <string name="info">Information</string>
    <string name="more_options">More options</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password">Forgot your password? <font color="#FF3700B3">Get help here</font></string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="sign_in">Sign In.</string>
    <string name="prompt_username">Username</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="used_email">This email is already used</string>
    <string name="used_username">This username is already used</string>
    <string name="not_same_password">Passwords must be same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up.</string>
    <string name="enter_sec_code">Enter the code we sent to your email.</string>
    <string name="prompt_sec_code">Security Code</string>
    <string name="not_get_code">Didn\'t get the code? <font color="#FF3700B3">Resend it</font></string>
    <string name="invalid_sec_code">Wrong Security Code</string>
    <string name="main_bottom_dialog_btn_event">Event</string>
    <string name="main_bottom_dialog_btn_place">Place</string>
    <string name="main_bottom_dialog_text">What would you like to add?</string>
    <string name="event_read_more">more</string>
    <string name="event_read_less">less</string>
    <string name="event_image">Event image</string>
    <string name="event_button_enroll">Enroll</string>
    <string name="event_button_ticket">Show ticket</string>
    <string name="event_button_check_tickets">Check Tickets</string>
    <string name="event_enroll_button_enrolled">Enrolled</string>
    <string name="event_event_by">Event by</string>
    <string name="event_about">About</string>
    <string name="event_location">Location</string>
    <string name="event_tags">Tags</string>
    <string name="event_alert_title">Add event to calendar?</string>
    <string name="event_alert_message">Do you want to add this event to your calendar and save the ticket in downloads?</string>
    <string name="place_read_more">more</string>
    <string name="place_read_less">less</string>
    <string name="place_image" translatable="false">Place image</string>
    <string name="place_about">Description</string>
    <string name="place_location">Location</string>
    <string name="place_rate">Rate this place</string>
    <string name="place_open">Open</string>
    <string name="place_closed">Closed</string>
    <string name="place_closes">Closes</string>
    <string name="place_opens">Opens</string>
    <string name="place_always_open">Always open</string>
    <string name="place_tomorrow">Tomorrow</string>
    <string name="event_card_image" translatable="false">Card event image</string>
    <string name="user_profile_image" translatable="false">Profile image</string>
    <string name="user_my_events">MY EVENTS</string>
    <string name="user_saved">MY FAVORITES</string>
    <string name="user_upcoming">MY TICKETS</string>
    <string name="user_events">EVENTS</string>
    <string name="nav_user">profile</string>
    <string name="nav_map">map</string>
    <string name="nav_add">add</string>
    <string name="nav_ticket">ticket</string>
    <string name="nav_home">home</string>
    <string name="title_activity_signup" translatable="false">SignupActivity</string>
    <string name="title_activity_verify" translatable="false">VerifyActivity</string>
    <string name="add_start_date_and_time">Event starts</string>
    <string name="add_end_date_and_time">Event ends</string>
    <string name="add_enter_title">Enter title</string>
    <string name="add_enter_name">Enter Name</string>
    <string name="add_enter_location">Select location</string>
    <string name="add_select_start_date_and_time">Select start date</string>
    <string name="add_select_end_date_and_time">Select end date</string>
    <string name="add_enter_description">Enter description</string>
    <string name="add_enter_number_of_tickets">Enter number of tickets</string>
    <string name="add_event_photo">Event photo</string>
    <string name="add_create_event">Create Event</string>
    <string name="add_upload_photo">Upload a photo</string>
    <string name="add_select_photo">Select Photo</string>
    <string name="add_capture_photo" translatable="false">Capture Photo</string>
    <string name="add_photo_permission_rationale">We need permission to access your device\'s camera and gallery to add a photo to your event.</string>
    <string name="add_select_category">Category</string>
    <string name="add_select_tickets">Tickets</string>
    <string name="add_select_tags">Tags</string>
    <string name="add_enter_tags">Add tags (optional)</string>
    <string name="add_submit">Submit</string>
    <string name="add_add_place">Send to verification</string>
    <string name="add_phone">Phone</string>
    <string name="add_enter_phone">Enter phone number(optional)</string>
    <string name="add_web_page">Web page</string>
    <string name="add_times">Open times</string>
    <string name="add_select_times">Select open times</string>
    <string name="add_enter_url">Enter web page\'s url(optional)</string>
    <string name="invalid_name">Name is required</string>
    <string name="invalid_title">Title must be more than 5 characters</string>
    <string name="invalid_description">Description must be more than 10 characters</string>
    <string name="invalid_location">Location is required</string>
    <string name="invalid_dates">Open times are required</string>
    <string name="invalid_url">Must be valid URL</string>
    <string name="invalid_phone">Must be valid phone number</string>
    <string name="invalid_image">Image is required</string>
    <string name="invalid_start_date">Start date is required</string>
    <string name="invalid_end_date">End date is required</string>
    <string name="invalid_tickets">Tickets count is required</string>
    <string name="end_must_be_after_start">The end time should be after the start time.</string>
    <string name="select_future_date">Please select a future date.</string>
    <string name="select_start_date_first">Please select the start date first.</string>
    <string name="utk_note">This ticket grants you access to all enrolled events.</string>
    <string name="map_search_for_location">Search for location</string>
    <string name="map_btn_events">Events</string>
    <string name="map_btn_places">Places</string>
    <string name="move_car" translatable="false">Move Car</string>
    <string name="scroll_down" translatable="false">Scroll down</string>
    <string name="scroll_up" translatable="false">Scroll up</string>
    <string name="switch_menu_right" translatable="false">Switch right</string>
    <string name="switch_menu_left" translatable="false">Switch left</string>
    <string name="pause_or_resume" translatable="false">Pause or Resume</string>
    <string name="restart" translatable="false">Restart</string>
    <string name="open_add" translatable="false">Open add</string>
    <string name="home_search">Find events in</string>
    <string name="home_show_all">Show all events</string>
    <string name="home_show_nearby">Show local events</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="select_times_heading">Select open times</string>
    <string name="select_opening_time">From</string>
    <string name="select_closing_time">To</string>
    <string name="add_select_all_open_times">Select all open times!</string>
    <string name="text_icon">Text</string>
    <string name="ticket_icon">Ticket</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_cancel" translatable="false">Cancel</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="settings_delete_confirm_title">Confirm account deletion</string>
    <string name="settings_delete_confirm_message">Are you sure want to delete your account?</string>
    <string name="pref_title_logout_button">Logout</string>
    <string name="pref_title_admin_page_button">Admin page</string>
    <string name="default_language">English</string>
    <string name="pref_title_change_username_button">Change username</string>
    <string name="pref_title_change_password_button">Change Password</string>
    <string name="pref_title_push_switch">Push notifications</string>
    <string name="pref_summary_push_switch">Enable push notifications</string>
    <string name="pref_summary_languages_list">Select your language</string>
    <string name="pref_title_languages_list">Language</string>
    <string name="pref_title_theme_switch">Dark mode</string>
    <string name="pref_summary_theme_switch">Enable dark mode</string>
    <string name="pref_title_delete_button">Delete account</string>
</resources>