<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Theme">
        <SwitchPreferenceCompat
            android:key="prefSwtTheme"
            android:title="@string/pref_title_theme_switch"
            android:summary="@string/pref_summary_theme_switch"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Language">
        <ListPreference
            android:key="prefListLanguages"
            android:title="@string/pref_title_languages_list"
            android:summary="@string/pref_summary_languages_list"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="@string/default_language" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Notifications">
        <SwitchPreferenceCompat
            android:key="prefSwtPush"
            android:title="@string/pref_title_push_switch"
            android:summary="@string/pref_summary_push_switch"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Account">
        <PreferenceScreen
            android:key="prefBtnUsername"
            android:title="@string/pref_title_change_username_button">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="prefBtnPassword"
            android:title="@string/pref_title_change_password_button">
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Authentication">
        <PreferenceScreen
            android:key="prefBtnAdmin"
            android:title="@string/pref_title_admin_page_button">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="prefBtnLogout"
            android:title="@string/pref_title_logout_button">
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Danger zone">
        <PreferenceScreen
            android:key="prefBtnDelete"
            android:title="@string/pref_title_delete_button">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
