<?xml version="1.0" encoding="utf-8"?>
<remote-actions version="1.2">
    <action
        id="move_down"
        label="@string/scroll_down"
        priority="2"
        trigger_key="DPAD_DOWN">
        <preference name="gesture" value="swipe_up"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="move_up"
        label="@string/scroll_up"
        priority="3"
        trigger_key="DPAD_UP">
        <preference name="gesture" value="swipe_down"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="move_right"
        label="@string/switch_menu_right"
        priority="4"
        trigger_key="DPAD_RIGHT">
        <preference name="gesture" value="swipe_right"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="move_left"
        label="@string/switch_menu_left"
        priority="5"
        trigger_key="DPAD_LEFT">
        <preference name="gesture" value="swipe_left"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="open_add"
        label="@string/open_add"
        priority="6"
        trigger_key="SPACE">
        <preference name="gesture" value="double_click"/>
        <preference name="button_only" value="true"/>
    </action>
</remote-actions>
