<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_top_corners"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_bottom_dialog_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainBtnEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/main_bottom_dialog_btn_event"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/mainBtnPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/main_bottom_dialog_btn_place"
        android:textColor="@color/white" />

</LinearLayout>
