<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.map.MapFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="true"
        android:paddingBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </org.osmdroid.views.MapView>

    <EditText
        android:id="@+id/mapEtLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:backgroundTint="#CCFFFFFF"
        android:ems="10"
        android:hint="@string/map_search_for_location"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mapBtnCenterOnLocation"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btn_center_on_location"
        android:focusableInTouchMode="false"
        android:scaleType="fitCenter"
        android:src="@drawable/osm_ic_center_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/map">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dMapBtnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dMapBtnOk"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>