<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:maxWidth="448dp"
    android:orientation="vertical"
    tools:context=".ui.login.VerifyActivity">

    <ImageView
        android:id="@+id/verifyIvLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:contentDescription="@string/logo"
        android:padding="25dp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/verifyViewBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="visible"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerTopSize35dp">

        <RelativeLayout
            android:id="@+id/verifyRlBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:paddingHorizontal="10dp">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/enter_sec_code"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/verifyEtSecCode"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:hint="@string/prompt_sec_code"
                android:inputType="number"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:selectAllOnFocus="true"
                android:textColorHint="@color/hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/verifyBtnSignup"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/verifyEtSecCode"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:layout_marginTop="25dp"
                android:elevation="0dp"
                android:enabled="false"
                android:maxWidth="488dp"
                android:text="@string/action_sign_up"
                android:translationZ="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/signupPbLoading"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/verifyBtnSignup"
                android:layout_alignBottom="@+id/verifyBtnSignup"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:scrollbarSize="0dp"
                android:translationZ="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/verifyTvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verifyBtnSignup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/not_get_code" />
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_above="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="4dp"
                android:background="@color/stroke" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/verifyTvLogin"
                android:layout_alignParentStart="false"
                android:layout_centerHorizontal="true"
                android:text="@string/have_account" />

            <TextView
                android:id="@+id/verifyTvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="136dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sign_in"
                android:textColor="@color/purple_700"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>